--- a/AT.html
+++ b/AT.html
@@ -46,7 +46,7 @@
           <p class="about" style="width:580px;"> Team project creating animation from a script about the importance of acting together. </p>
         </div>
 
-        <a href="CV/CV.pdf" target="_blank" download> </a>
+        <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
       </div>
     </div>
 
