--- a/Conqueer.html
+++ b/Conqueer.html
@@ -44,7 +44,7 @@
           <p class="about"> Ongoing motion/graphic design work for Conqueer Bristol.</p>
         </div>
 
-        <a href="CV/CV.pdf" target="_blank" download> </a>
+        <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
       </div>
 
     </div>
@@ -54,7 +54,7 @@
       <div class="icon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
     </div>
 
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
     justify-content: flex-end;
     flex-direction: row;
     align-content: flex-end;
@@ -138,9 +138,13 @@
       <div class="image-gallery">
         <div style="width: 100%;" class="column">
           <div class="image-item">
+            <p> Moving poster created using Blender and After Effects.</p>
             <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/MOVING FLAIL.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <p> Poster created using Blender and Photoshop.</p>
             <img src="MEDIACONQ/IGFIN2.png" alt="">
+            <p> Poster created using Cinema 4D and Photoshop.</p>
             <img src="MEDIACONQ/CONQUEER.png" alt="">
+            <p> Moving poster created using Cinema 4D and After Effects.</p>
             <video style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
           </div>
@@ -148,10 +152,18 @@
 
         <div style="width: 100%;" class="column">
           <div class="image-item">
+            <p> Announcement video created using Blender and After Effects.</p>
             <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/ANNOUNCEMENT.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <p> Poster created using Procreate, Blender and Photoshop.</p>
+
             <img src="MEDIACONQ/AHH.png" alt=""></img>
+            <p> Moving poster created using Cinema 4D and After Effects.</p>
+
             <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <p> Announcement graphic created using Cinema 4D and Photoshop.</p>
             <img style="width: 100%; height: 100%;;" class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
+            <p> Poster created using Procreate and Photoshop.</p>
+
             <img style="width: 100%; height: 100%;" style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
           </div>
         </div>
