--- a/Grounded.html
+++ b/Grounded.html
@@ -6,7 +6,7 @@
   <title>Kailan Walsh</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="styles/stylesconq.css">
+  <link rel="stylesheet" href="styles/stylesgroun.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
@@ -44,10 +44,10 @@
         <h1> Grounded</h1>
 
         <div class="aboutcontainer">
-          <p class="about"> Motion piece creating & animating characters based on foley sounds. </p>
+          <p class="about"> Motion piece creating & animating characters based on foley sounds.  </p>
         </div>
 
-        <a href="CV/CV.pdf" target="_blank" download> </a>
+        <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
       </div>
     </div>
 
@@ -55,7 +55,7 @@
       <div class"icon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
     </div>
 
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
       justify-content: flex-end;
       flex-direction: row;
       align-content: flex-end;
@@ -159,7 +159,7 @@
 
       <div style="width:100%;" class="column">
         <img style="width: 100%;"src="imageshome/misc/skate.gif" alt="Alone Cover">
-        <video style="width: 100%" autoplay muted loop controls src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video>
+        <video style="width: 100%; " autoplay muted loop controls src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video>
 
       </div>
     </div>
