--- a/alone.html
+++ b/alone.html
@@ -41,12 +41,12 @@
       <div class="head">
       <h1 style="width: 150px"> Alone Zine </h1>
       <div class="aboutcontainer"><p  class="about" style="width:420px"> Zine created based on the book A Lonely City by Olivia Liang.</p> </div>
-      <a href="CV/CV.pdf" target="_blank" download> </a>
+      <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
       </div>
 </div>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
   /* display: flex; */
     /* width: 300px; */
     justify-content: flex-end;
@@ -131,19 +131,19 @@
   <div class="carouselcon">
   <div id="carousel">
     <div class="slide">
-      <img class="cover" src="MEDIALONE/COVER.png" alt="Alone Cover">
+      <img style="width:100%; height:100%;" class="cover" src="MEDIALONE/COVER.png" alt="Alone Cover">
     </div>
     <div class="slide">
-      <img class="cover" src="MEDIALONE/1.png" alt="Alone Cover">
+      <img style="width:100%; height:100%;"class="cover" src="MEDIALONE/1.png" alt="Alone Cover">
     </div>
     <div class="slide">
-      <img class="cover" src="MEDIALONE/2.png" alt="Alone Cover">
+      <img style="width:100%; height:100%;" class="cover" src="MEDIALONE/2.png" alt="Alone Cover">
     </div>
     <div class="slide">
-    <img class="cover" src="MEDIALONE/3.png" alt="Alone Cover">
+    <img style="width:100%; height:100%;" class="cover" src="MEDIALONE/3.png" alt="Alone Cover">
   </div>
   <div class="slide">
-    <img class="cover" src="MEDIALONE/4.png" alt="Alone Cover">
+    <img style="width:100%; height:100%;" class="cover" src="MEDIALONE/4.png" alt="Alone Cover">
   </div>
 </div>
 </div>
