--- a/fuze.html
+++ b/fuze.html
@@ -45,7 +45,7 @@
           <p class="about"> Ongoing motion/graphic design work for FUZE Bristol.</p>
         </div>
 
-        <a href="CV/CV.pdf" target="_blank" download> </a>
+        <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
       </div>
 
     </div>
@@ -54,7 +54,7 @@
       <div class="icon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
     </div>
 
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
     justify-content: flex-end;
     flex-direction: row;
     align-content: flex-end;
@@ -134,16 +134,25 @@
 
     <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
-
-
-
+<div class="topcon">
+<img style="width:100%; margin-bottom:1%;" src="MEDIAFUZE/REDLIGHT.png">
+</div>
   <div class="container">
   <div class="image-gallery" style="width:100%;">
     <div style="width:100%;" class="column">
       <div class="image-item">
+        <p> Announcement graphic created using Blender, Adobe Illustrator, After Effects </p>
         <video style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/REDLIGHTMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+        <p> Event map graphic created using Adobe Illustrator, Photoshop </p>
         <img src="MEDIAFUZE/MAP.png" style="width: 100%" style="border-radius:5px; margin:5%;" alt=""></img>
+        <p> Ticket announcement, created using Illustrator and After Effects </p>
         <video style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/LIVE.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+        <p> Blog graphic, created using Photoshop </p>
+
+        <img style="margin-bottom: 5%;" src="MEDIAFUZE/HEADER5.png" alt="">
+        <p> Blog graphic, created using Photoshop </p>
+
+        <img style="margin-bottom: 5%;" src="MEDIAFUZE/Luxx.png" alt="">
 
       </div>
     </div>
@@ -151,10 +160,14 @@
 
     <div style="width: 100%;" class="column">
       <div class="image-item">
+        <p> Redlight flyer, created using Photoshop </p>
 
         <img style="width: 100%; height: 100%; margin-bottom: 5%;" src="MEDIAFUZE/A3.png" alt=""></img>
+        <p> Blood Ball flyer, created using Photoshop </p>
+
         <img src="MEDIAFUZE/flyer1.png" style="width: 100%; margin-bottom: 5%;" alt="">
-        <img style="margin-bottom: 5%;" src="MEDIAFUZE/HEADER5.png" alt="">
+        <p> Blog graphic, created using Blender and Photoshop </p>
+
         <img src="MEDIAFUZE/GRAPHIC.png" alt="">
       </div>
     </div>
@@ -162,7 +175,19 @@
   </div>
 </div>
 
+<p>Pages created for Fuze's publication.</p>
 
+<div class="topcon">
+<div>
+<img style="margin-bottom: 5%; width:100%;" src="MEDIAFUZE/Spread1.png" alt="">
+</div>
+<div>
+<img style="margin-bottom: 5%;width:100%;" src="MEDIAFUZE/Spread2.png" alt="">
+</div>
+<div>
+<img style="margin-bottom: 5%;width:100%;" src="MEDIAFUZE/Spread3.png" alt="">
+</div>
+</div>
 
 
   <hr>
