--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="sticky">
     <div class="name">Kailan Walsh</div>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
   /* display: flex; */
     /* width: 300px; */
     justify-content: flex-end;
@@ -274,6 +274,10 @@
       <div class="column">
         <div class="image-item">
 
+          <p> Propyard - Courtyard Social logo sheet (2023)</p>
+
+          <img src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
+
           <p> Numeris - Gift card animation (2023) </p>
 
           <video style="border-radius:5px;" src="VIDEO/NUMERIS.mp4" loop muted autoplay poster="posterimage.jpg"></video>
@@ -305,8 +309,6 @@
           <p> MeToo (2020) </p>
           <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 10.mp4" alt="Alone Cover"></video>
 
-          <p> Sliderfy - Silder Mockup Custom Design (2021) </p>
-          <img src="imageshome/misc/slidegreen.jpg" alt="Alone Cover">
 
         </div>
       </div>
