--- a/knowing.html
+++ b/knowing.html
@@ -41,12 +41,12 @@
       <div class="head">
       <h1 style="width:170px;"> Knowing Me </h1>
       <div class="aboutcontainer" style="width: 600px;"><p  class="about"> Publication based on personal interview with someone from another country or culture.</p> </div>
-      <a href="CV/CV.pdf" target="_blank" download> </a>
+      <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
       </div>
 </div>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
   /* display: flex; */
     /* width: 300px; */
     justify-content: flex-end;
