--- a/wig.html
+++ b/wig.html
@@ -43,14 +43,14 @@
         <div class="aboutcontainer">
           <p class="about"> CD booklet created to highlight the importance of earplugs when clubbing.</p>
         </div>
-        <a href="CV/CV.pdf" target="_blank" download> </a>
+        <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
       </div>
 
     </div>
 
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
     justify-content: flex-end;
     flex-direction: row;
     align-content: flex-end;
@@ -128,33 +128,31 @@
 
     <div class="container">
       <div class="image-gallery">
-        <div class="column">
+        <div style="width:100%; " class="column">
           <div class="image-item">
 
-            <img style="width:100%; height:30em;" src="MEDIAWIG/0.png" alt="Alone Cover">
+            <img style="width:100%; " src="MEDIAWIG/0.png" alt="Alone Cover">
             <img style="width:100%; " src="MEDIAWIG/3.png" alt="Alone Cover">
-            <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
-
+            <img style="width:100%; " rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
 
           </div>
         </div>
 
-        <div class="column">
+        <div style="width:100%; " class="column">
           <div class="image-item">
 
             <img style="width:100%; " src="MEDIAWIG/1.png" alt="Alone Cover">
-            <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
-            <img style="width:100%; height:30em;" rotate="90" src="MEDIAWIG/6.png" alt="Alone Cover">
+            <img style="width:100%; " rotate="90" src="MEDIAWIG/4.png" alt="Alone Cover">
 
           </div>
         </div>
 
-        <div class="column">
+        <div style="width:100%; " class="column">
           <div class="image-item">
 
-            <img style="width:100%;" rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
+            <img  rotate="90" src="MEDIAWIG/2.png" alt="Alone Cover">
             <img style="width:100%; " rotate="90" src="MEDIAWIG/5.png" alt="Alone Cover">
-
+            <img style="width:100%; " rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
           </div>
         </div>
       </div>
