--- a/deepin.html
+++ b/deepin.html
@@ -39,12 +39,12 @@
         <div class="head">
         <h1 style="width:165px"> Deep Inside </h1>
         <div class="aboutcontainer"><p  class="about" style="width:460px;"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p> </div>
-        <a href="CV/CV.pdf" target="_blank" download> </a>
+        <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
         </div>
 </div>
       <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
-      <a href="CV/CV.pdf" target="_blank" download="" style="
+      <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
     /* display: flex; */
       /* width: 300px; */
       justify-content: flex-end;
