--- a/heat.html
+++ b/heat.html
@@ -46,12 +46,12 @@
         <div class="aboutcontainer">
           <p class="about"> Zine created based on The Uninhabitable Earth by David Wallace-Wells. </p>
         </div>
-        <a href="CV/CV.pdf" target="_blank" download> </a>
+        <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
       </div>
     </div>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
   /* display: flex; */
     /* width: 300px; */
     justify-content: flex-end;
