--- a/outhere.html
+++ b/outhere.html
@@ -48,7 +48,7 @@
 
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
-    <a href="CV/CV.pdf" target="_blank" download="" style="
+    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
   /* display: flex; */
     /* width: 300px; */
     justify-content: flex-end;
