--- a/talltales.html
+++ b/talltales.html
@@ -5,7 +5,7 @@
     <title>Kailan Walsh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="styles/stylesconq.css">
+    <link rel="stylesheet" href="styles/talltales.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
@@ -41,7 +41,7 @@
           <p  class="about"> University task to create a video based on a family story. </p>
         </div>
 
-        <a href="CV/CV.pdf" target="_blank" download></a>
+        <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download></a>
         </div>
 
       </div>
@@ -51,7 +51,7 @@
       </div>
 
 
-      <a href="CV/CV.pdf" target="_blank" download="" style="
+      <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
     /* display: flex; */
       /* width: 300px; */
       justify-content: flex-end;
