--- a/Grounded.html
+++ b/Grounded.html
@@ -44,7 +44,7 @@
         <h1> Grounded</h1>
 
         <div class="aboutcontainer">
-          <p class="about"> Motion piece creating & animating characters based on foley sounds.  </p>
+          <p class="about"> Motion piece creating & animating characters based on foley sounds. </p>
         </div>
 
         <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
@@ -144,7 +144,7 @@
     <script src="https://player.vimeo.com/api/player.js"></script>
 
 
-    <p style="font-family: sans-serif; display: flex; justify-content:center;"> Initial Outcomes & Idea Development</p>
+    <H1 style="font-family: sans-serif; display: flex; justify-content:center;"> Initial Outcomes & Idea Development</H1>
 
     <div class="container">
       <div class="image-gallery">
