--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <hr>
 
         <div class="groundedcontainer">
-          <p class="groundedinfo"> Motion piece creating &amp; animating characters based on foley sounds. </p>
+          <p class="groundedinfo"> Motion piece creating &amp; animating characters based on foley sounds. (Cinema 4D, After Effects) </p>
           <a class="grounded" href="Grounded.html">
             <li class="ligrounded"><img class="imggrounded" src="imageshome/grounded.png">Grounded</li>
           </a>
@@ -183,7 +183,7 @@
           align-content: center;
           text-align: justify;
           flex-direction: column-reverse;
-          justify-content: center;" class="talltalesinfo"> University task to create a video based on a family story. </p>
+          justify-content: center;" class="talltalesinfo"> University task to create a video based on a family story. (Cinema 4D, Premiere Pro) </p>
           <a class="talltales" href="talltales.html">
             <li class="litalltales"><img class="imgtalltales" src="imageshome/steph.png">Tall Tales</li>
           </a>
@@ -202,7 +202,7 @@
           align-content: center;
           text-align: justify;
           flex-direction: column-reverse;
-          justify-content: center;" class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p>
+          justify-content: center;" class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition. (Cinema 4D, After Effects)  </p>
           <a class="deepin" href="deepin.html">
             <li class="lideepin"><img class="imgdeepin" src="imageshome/deep.png">Deep Inside</li>
           </a>
@@ -274,21 +274,20 @@
       <div class="column">
         <div class="image-item">
 
-          <p> Propyard - Courtyard Social logo sheet (2023)</p>
+          <p> Courtyard Social - Illustrator (2023)</p>
 
           <img src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
 
-          <p> Numeris - Gift card animation (2023) </p>
+          <p> Numeris Gift Card - Blender (2023) </p>
 
           <video style="border-radius:5px;" src="VIDEO/NUMERIS.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
-          <p> Sound Project - My Workshop Poster (2022) </p>
+          <p> Chiming In - Photoshop, Risograph (2022) </p>
           <img src="imageshome/misc/CHIMING.png" alt="Alone Cover">
+          <p> Sound GIF - AE Trapcode (2020) </p>
+          <video autoplay muted loop class="first" src="VIDEO/gif.mp4" alt="Alone Cover"></video>
 
 
-
-          <p> MeToo (2020) </p>
-          <video autoplay muted loop class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
 
 
 
@@ -297,18 +296,17 @@
       <div class="column">
         <div class="image-item">
 
-          <p> Radio show commission (2022) </p>
+          <p> Radio Show - Cinema 4D (2022) </p>
           <img src="imageshome/misc/ROOM5.png" alt="Alone Cover">
 
-          <p> Sound Project - Famous quote A0 Poster (2022) </p>
-          <img src="imageshome/misc/QUOTE.png" alt="Alone Cover">
-
-          <p> MeToo (2020) </p>
+          <p> MeToo - After Effects (2020) </p>
           <video autoplay muted loop class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
 
-          <p> MeToo (2020) </p>
+          <p> MeToo - Cinema 4D, AE Trapcode (2020) </p>
           <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 10.mp4" alt="Alone Cover"></video>
 
+          <p> MeToo - Cinema 4D, After Effects (2020) </p>
+          <video autoplay muted loop class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
 
         </div>
       </div>
@@ -316,20 +314,21 @@
         <div class="image-item">
 
 
-          <p> Cut It Out (2020) </p>
+          <p> Cut It Out - After Effects (2020) </p>
           <video style="border-radius:5px;" src="VIDEO/cutit.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
-          <p> Vault Records(2022) </p>
+          <p> Cymatics - After Effects, Trapcode (2022) </p>
+          <iframe src="https://player.vimeo.com/video/730951920?h=0e59ab30c2&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="100%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="CYMATIC"></iframe>
+
+
+          <p> Vault Records - After Effects (2022) </p>
           <video autoplay muted loop class="first" src="VIDEO/GEO.mp4" alt="Alone Cover"></video>
 
-          <p> Sound Project - Discarded poster outcome (2022) </p>
+          <p> Tinnitus - Cinema 4D, Photoshop (2022) </p>
           <img src="imageshome/misc/ear.jpeg" alt="Alone Cover">
 
-          <p> On My Radio (2020) </p>
+          <p> On My Radio - Cinema 4D, Photoshop (2020) </p>
           <img src="imageshome/misc/6.jpg" alt="Alone Cover">
-
-
-
 
         </div>
       </div>
