--- a/AT.html
+++ b/AT.html
@@ -122,7 +122,6 @@
     </a>
   </div>
 
-
   <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
@@ -132,22 +131,20 @@
         allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
     <script src="https://player.vimeo.com/api/player.js"></script>
 
-    <p style="font-family: sans-serif; display: flex; justify-content:center;"> Process Document </p>
+<hr>
+
+    <p style="font-family: sans-serif; display: flex; justify-content:flex-start;"> Process Document </p>
     <div class="container">
       <div class="image-gallery">
         <div style="width:100%;" class="column">
           <div class="image-item">
-            <img src="MEDIAAT/1.png" alt="">
-            <img src="MEDIAAT/3.png" alt="">
-            <img src="MEDIAAT/SPREAD.jpg" alt="" style="width:100%;">
           </div>
         </div>
 
+
+
         <div style="width: 100%;" class="column">
           <div class="image-item">
-            <img src="MEDIAAT/2.png" alt="">
-            <img src="MEDIAAT/4.png" alt="">
-            <img src="MEDIAAT/5.png" alt="">
 
 
           </div>
@@ -155,8 +152,30 @@
       </div>
 </div>
 
+
+<div>
+
+<img width="29%"src="MEDIAAT/5.png" alt="">
+<img width="29%"src="MEDIAAT/SPREAD.jpg" alt="">
+
+</div>
+<div>
+  <img width="200vw"src="MEDIAAT/2.png" alt="">
+  <img width="200vw"src="MEDIAAT/4.png" alt="">
+  <img width="200vw"src="MEDIAAT/1.png" alt="">
+  <img width="200vw"src="MEDIAAT/3.png" alt="">
+</div>
+
+
+</div>
+
+</div>
+
+
+
+<hr>
       <div class="anicon">
-        <video style="width: 80%; height:80%;" src="MEDIAAT/animatic.mp4" autoplay muted loop >
+        <video style="width: 60%; height:60%;" src="MEDIAAT/animatic.mp4" autoplay muted loop >
 
         </video>
 
