--- a/Grounded.html
+++ b/Grounded.html
@@ -12,7 +12,6 @@
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-
 </head>
 
 <body>
@@ -136,34 +135,39 @@
 
 
 
-
     <div style="padding:56.25% 0 0 0;position:relative;">
       <iframe src="https://player.vimeo.com/video/750409212?h=774a636d93&quality=1080p&loop=1&title=0&byline=0&portrait=0" style="margin-top:1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0"
         allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
     <script src="https://player.vimeo.com/api/player.js"></script>
+  </FadeInSection>
 
+    <H1 style="font-weight: initial; font-family: sans-serif; display: flex; justify-content:center;"> Initial Outcomes & Idea Development</H1>
 
-    <H1 style="font-family: sans-serif; display: flex; justify-content:center;"> Initial Outcomes & Idea Development</H1>
-
-    <div class="container">
-      <div class="image-gallery">
+    <div style="justify-content:flex-start; "class="container">
+      <div style="width:50%;"class="image-gallery">
       <div style="width:100%;"class="column">
         <div class="image-item">
 
         <img src="imageshome/misc/gif1.gif" alt="Alone Cover">
-        <img src="imageshome/misc/snow.png" alt="Alone Cover">
 
       </div>
     </div>
 
       <div style="width:100%;" class="column">
         <img style="width: 100%;"src="imageshome/misc/skate.gif" alt="Alone Cover">
-        <video style="width: 100%; " autoplay muted loop controls src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video>
 
       </div>
     </div>
+
+  <!--   <div style="width:100%;" class="column">
+     <video style="width: 100%; " autoplay muted loop controls src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video> -->
+    </div>
+  </div>
 </div>
+</div>
+</FadeInSection>
+
     <hr>
 
     <div class="bottom">
@@ -178,8 +182,8 @@
 
 
 
-
   <script>
+
     /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
     function openNav() {
       document.getElementById("mySidenav").style.width = "250px";
@@ -193,7 +197,12 @@
       document.getElementById("main").style.marginLeft = "0";
       document.getElementById("main2").style.marginLeft = "0";
     }
+
+
   </script>
+
+
+
 </body>
 
 </body>
