--- a/deepin.html
+++ b/deepin.html
@@ -28,7 +28,6 @@
         <a href="wig.html">Plug-In</a>
         <a href="heat.html">Heat Death</a>
         <a href="outhere.html">Out There</a>
-        <a href="knowing.html">Knowing Me, Knowing You</a>
 
       </div>
 
@@ -38,7 +37,7 @@
 <div ID="main">
         <div class="head">
         <h1 style="width:165px"> Deep Inside </h1>
-        <div class="aboutcontainer"><p  class="about" style="width:460px;"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p> </div>
+        <div class="aboutcontainer"><p  class="about" style="width:460px;"> Motion piece created to be exhibited at Strange Brew, Bristol </p> </div>
         <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download> </a>
         </div>
 </div>
