--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
       <div class="column">
         <div class="image-item">
 
+          <p> Roker - Album Cover (2023)</p>
+          <img style="margin-bottom: 5%;" src="imageshome/misc/31.png" alt="Alone Cover">
+          <video style="border-radius:5px;" src="VIDEO/SPIN2.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+
           <p> Courtyard Social - Illustrator (2023)</p>
 
           <img src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
@@ -282,10 +286,6 @@
 
           <video style="border-radius:5px;" src="VIDEO/NUMERIS.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
-          <p> Chiming In - Photoshop, Risograph (2022) </p>
-          <img src="imageshome/misc/CHIMING.png" alt="Alone Cover">
-          <p> Sound GIF - AE Trapcode (2020) </p>
-          <video autoplay muted loop class="first" src="VIDEO/gif.mp4" alt="Alone Cover"></video>
 
 
 
@@ -302,11 +302,9 @@
           <p> MeToo - After Effects (2020) </p>
           <video autoplay muted loop class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
 
-          <p> MeToo - Cinema 4D, AE Trapcode (2020) </p>
-          <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 10.mp4" alt="Alone Cover"></video>
+          <p> Chiming In - Photoshop, Risograph (2022) </p>
+          <img src="imageshome/misc/CHIMING.png" alt="Alone Cover">
 
-          <p> MeToo - Cinema 4D, After Effects (2020) </p>
-          <video autoplay muted loop class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
 
         </div>
       </div>
@@ -317,18 +315,14 @@
           <p> Cut It Out - After Effects (2020) </p>
           <video style="border-radius:5px;" src="VIDEO/cutit.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
-          <p> Cymatics - After Effects, Trapcode (2022) </p>
-          <iframe src="https://player.vimeo.com/video/730951920?h=0e59ab30c2&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="100%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="CYMATIC"></iframe>
 
 
           <p> Vault Records - After Effects (2022) </p>
           <video autoplay muted loop class="first" src="VIDEO/GEO.mp4" alt="Alone Cover"></video>
 
-          <p> Tinnitus - Cinema 4D, Photoshop (2022) </p>
-          <img src="imageshome/misc/ear.jpeg" alt="Alone Cover">
+          <p> MeToo - Cinema 4D, After Effects (2020) </p>
+          <video autoplay muted loop class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
 
-          <p> On My Radio - Cinema 4D, Photoshop (2020) </p>
-          <img src="imageshome/misc/6.jpg" alt="Alone Cover">
 
         </div>
       </div>
