--- a/AT.html
+++ b/AT.html
@@ -153,27 +153,26 @@
 </div>
 
 
-<div>
+<div class="process">
 
-<img width="29%"src="MEDIAAT/5.png" alt="">
-<img width="29%"src="MEDIAAT/SPREAD.jpg" alt="">
-
-</div>
-<div>
-  <img width="200vw"src="MEDIAAT/2.png" alt="">
-  <img width="200vw"src="MEDIAAT/4.png" alt="">
-  <img width="200vw"src="MEDIAAT/1.png" alt="">
-  <img width="200vw"src="MEDIAAT/3.png" alt="">
-</div>
-
+<img style="margin: 3%;"width="29%"src="MEDIAAT/5.png" alt="">
+<img style="margin: 3%;"width="29%"src="MEDIAAT/SPREAD.jpg" alt="">
 
 </div>
-
+<div class="process">
+  <img style="margin: 1%;" width="200vw"src="MEDIAAT/2.png" alt="">
+  <img style="margin: 1%;" width="200vw"src="MEDIAAT/4.png" alt="">
+  <img style="margin: 1%;" style="margin: 3%;"width="200vw"src="MEDIAAT/1.png" alt="">
+  <img style="margin: 1%;"width="200vw"src="MEDIAAT/3.png" alt="">
 </div>
 
 
+</div>
 
-<hr>
+</div>
+
+
+
       <div class="anicon">
         <video style="width: 60%; height:60%;" src="MEDIAAT/animatic.mp4" autoplay muted loop >
 
