--- a/wig.html
+++ b/wig.html
@@ -135,29 +135,20 @@
 <img class="logo" src="MEDIAWIG/logo.png" alt="">
 </div>
 </div>
-<img style="margin: 5%; width:60%; " src="MEDIAWIG/mockup1.png" alt="Alone Cover">
+<img style="width:100%; " src="MEDIAWIG/35.png" alt="Alone Cover">
 
-<img style="margin: 5%;width:80%; " src="MEDIAWIG/mockup7.png" alt="Alone Cover">
-<img style="margin: 5%;width:70%; " src="MEDIAWIG/mockup8.png" alt="Alone Cover">
-<div class="container">
-  <div style="margin: 5%;" class="image-gallery">
-    <div style="width:100%; " class="column">
-      <div style="margin: 5%;" class="image-item">
-        <img style="margin: 5%;width:100%; " src="MEDIAWIG/mockup3.png" alt="Alone Cover">
-        <img style="margin: 5%;width:100%; " src="MEDIAWIG/mockup5.png" alt="Alone Cover">
 
-      </div>
-    </div>
+<img style="width:100%; " src="MEDIAWIG/mockup2.png" alt="Alone Cover">
 
-    <div style="width:100%; " class="column">
-      <div style="margin: 5%;"  class="image-item">
-        <img style="margin: 5%;width:100%; " src="MEDIAWIG/mockup2.png" alt="Alone Cover">
-        <img style="margin: 5%;width:100%; " src="MEDIAWIG/mockup4.png" alt="Alone Cover">
-        <img style="margin: 5%;width:100%; " src="MEDIAWIG/mockup6.png" alt="Alone Cover">
+<img style="width:100%; " src="MEDIAWIG/mockup3.png" alt="Alone Cover">
 
-      </div>
-    </div>
+<img style="width:100%; " src="MEDIAWIG/mockup7.png" alt="Alone Cover">
+<img style="width:100%; " src="MEDIAWIG/mockup8.png" alt="Alone Cover">
+<img style="width:100%; " src="MEDIAWIG/mockup5.png" alt="Alone Cover">
+<img style="width:100%; " src="MEDIAWIG/mockup4.png" alt="Alone Cover">
+<img style="width:100%; " src="MEDIAWIG/mockup6.png" alt="Alone Cover">
 
+ 
 
   </div>
 </div>
