--- a/wig.html
+++ b/wig.html
@@ -125,7 +125,7 @@
   <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 
 
-  <div id="main2">
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; " id="main2">
 
 
 <div id="subtitle" class="sub">
@@ -135,9 +135,12 @@
 <img class="logo" src="MEDIAWIG/logo.png" alt="">
 </div>
 </div>
+<img style="width:100%; " src="MEDIAWIG/inside.png" alt="Alone Cover">
+
+  <img style="width:50%; " src="MEDIAWIG/0.png" alt="Alone Cover">
 <img style="width:100%; " src="MEDIAWIG/35.png" alt="Alone Cover">
 
-
+<img style="width:100%; " src="MEDIAWIG/PICS.png" alt="Alone Cover">
 <img style="width:100%; " src="MEDIAWIG/mockup2.png" alt="Alone Cover">
 
 <img style="width:100%; " src="MEDIAWIG/mockup3.png" alt="Alone Cover">
@@ -147,8 +150,8 @@
 <img style="width:100%; " src="MEDIAWIG/mockup5.png" alt="Alone Cover">
 <img style="width:100%; " src="MEDIAWIG/mockup4.png" alt="Alone Cover">
 <img style="width:100%; " src="MEDIAWIG/mockup6.png" alt="Alone Cover">
+<img style="width:100%; " src="MEDIAWIG/mockup9.png" alt="Alone Cover">
 
- 
 
   </div>
 </div>
