--- a/index.html
+++ b/index.html
@@ -285,6 +285,8 @@ My design process is centered around understanding the unique needs and objectiv
 
 
           <p> Roker - Album Cover (2023)</p>
+          <img style="margin-bottom: 5%;" src="imageshome/misc/VINYL.png" alt="Alone Cover">
+
           <img style="margin-bottom: 5%;" src="imageshome/misc/31.png" alt="Alone Cover">
           <video controls style="border-radius:5px;" src="VIDEO/SPIN2.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
@@ -292,7 +294,6 @@ My design process is centered around understanding the unique needs and objectiv
 
           <img src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
           <img src="imageshome/misc/LOGO ORANGE.png" alt="Alone Cover">
-
 
 
 
@@ -333,6 +334,13 @@ My design process is centered around understanding the unique needs and objectiv
 
           <p> MeToo - Cinema 4D, After Effects (2020) </p>
           <video autoplay muted loop controls class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
+
+
+          <p> Future of Loneliness - Indesign (2020) </p>
+          <img style="margin-bottom: 5%;" src="imageshome/misc/fol1.png" alt="Alone Cover">
+          <img style="margin-bottom: 5%;" src="imageshome/misc/fol2.png" alt="Alone Cover">
+          <img style="margin-bottom: 5%;"src="imageshome/misc/fol6.png" alt="Alone Cover">
+          <img style="margin-bottom: 5%;"src="imageshome/misc/fol7.png" alt="Alone Cover">
 
 
         </div>
